--- a/org.kevoree.modeling.root/pom.xml
+++ b/org.kevoree.modeling.root/pom.xml
@@ -4,22 +4,19 @@
     <groupId>org.kevoree.modeling</groupId>
     <artifactId>org.kevoree.modeling.root</artifactId>
     <packaging>pom</packaging>
-    <version>1.3.0-SNAPSHOT</version>
+    <version>1.3.0-BETA1</version>
     <name>Kevoree :: Modeling :: Root</name>
     <url>https://github.com/dukeboard/kevoree-modeling-framework</url>
 
     <properties>
         <emf.version>2.7.0</emf.version>
-        <scala.version>2.9.2</scala.version>
+        <scala.version>2.9.3</scala.version>
         <bundle.vendor>IRISA/INRIA</bundle.vendor>
         <releaseUrl>http://maven.kevoree.org/release</releaseUrl>
         <kevoree.modeling.version>${project.version}</kevoree.modeling.version>
-        <kotlin.version>0.5.162</kotlin.version>
     </properties>
 
     <modules>
-        <module>../org.kevoree.modeling.scala.generator</module>
-        <module>../org.kevoree.modeling.scala.generator.mavenplugin</module>
         <module>../org.kevoree.modeling.kotlin.generator</module>
         <module>../org.kevoree.modeling.kotlin.generator.mavenplugin</module>
     </modules>
@@ -96,24 +93,6 @@
                     </execution>
                 </executions>
             </plugin>
-            <plugin>
-                <artifactId>kotlin-maven-plugin</artifactId>
-                <groupId>org.jetbrains.kotlin</groupId>
-                <version>${kotlin.version}</version>
-                <executions>
-                    <execution>
-                        <id>compile</id>
-                        <phase>process-sources</phase>
-                        <goals> <goal>compile</goal> </goals>
-                    </execution>
-                    <execution>
-                        <id>test-compile</id>
-                        <phase>process-test-sources</phase>
-                        <goals> <goal>test-compile</goal> </goals>
-                    </execution>
-                </executions>
-            </plugin>
-
         </plugins>
     </build>
 
