--- a/org.kevoree.modeling.kotlin.generator/pom.xml
+++ b/org.kevoree.modeling.kotlin.generator/pom.xml
@@ -11,7 +11,7 @@
     <parent>
         <artifactId>org.kevoree.modeling.root</artifactId>
         <groupId>org.kevoree.modeling</groupId>
-        <version>1.3.0-BETA1</version>
+        <version>1.3.0-SNAPSHOT</version>
         <relativePath>../org.kevoree.modeling.root/pom.xml</relativePath>
     </parent>
 
