--- a/samples/org.kevoree.modeling.sample.kevoree.js/pom.xml
+++ b/samples/org.kevoree.modeling.sample.kevoree.js/pom.xml
@@ -9,7 +9,7 @@
 
     <properties>
         <metamodel.ecore>metamodel/kevoree.ecore</metamodel.ecore>
-        <kotlin.version>0.5.429</kotlin.version>
+        <kotlin.version>0.1-SNAPSHOT</kotlin.version>
     </properties>
 
     <build>
@@ -61,6 +61,11 @@
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-stdlib</artifactId>
+            <version>${kotlin.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-js-library</artifactId>
             <version>${kotlin.version}</version>
         </dependency>
     </dependencies>
