--- a/samples/org.kevoree.modeling.sample.fsm.kt/pom.xml
+++ b/samples/org.kevoree.modeling.sample.fsm.kt/pom.xml
@@ -3,18 +3,21 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>org.kevoree.modeling.sample.fsm.kt</artifactId>
     <packaging>jar</packaging>
-    <name>Kevoree :: Modeling :: Scala :: Sample :: Finite State Machine :: Kotlin</name>
+    <name>Kevoree :: Modeling :: Sample :: Finite State Machine :: Kotlin</name>
+    <groupId>org.kevoree.modeling</groupId>
+    <version>1.3.0-SNAPSHOT</version>
+
+    <properties>
+        <metamodel.ecore>metamodel/fsm.ecore</metamodel.ecore>
+        <kotlin.version>0.5.429</kotlin.version>
+    </properties>
 
     <parent>
         <artifactId>org.kevoree.modeling.sample.root</artifactId>
         <groupId>org.kevoree.modeling</groupId>
-        <version>1.3.0-SNAPSHOT</version>
+        <version>1.0.0</version>
         <relativePath>../org.kevoree.modeling.sample.root/pom.xml</relativePath>
     </parent>
-
-    <properties>
-        <metamodel.ecore>metamodel/fsm.ecore</metamodel.ecore>
-    </properties>
 
     <dependencies>
         <dependency>
@@ -25,7 +28,7 @@
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-stdlib</artifactId>
-            <version>0.5.162</version>
+            <version>${kotlin.version}</version>
         </dependency>
     </dependencies>
 
@@ -41,13 +44,34 @@
                         <id>ModelGen</id>
                         <goals>
                             <goal>generate</goal>
-                            <goal>generatePersistentLayer</goal>
+                          <!--  <goal>generatePersistentLayer</goal>   -->
                         </goals>
                         <configuration>
                             <ecore>${metamodel.ecore}</ecore>
                             <packagePrefix>org</packagePrefix>
                             <clearOutput>false</clearOutput>
                         </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.jetbrains.kotlin</groupId>
+                <artifactId>kotlin-maven-plugin</artifactId>
+                <version>${kotlin.version}</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.jetbrains.kotlin</groupId>
+                        <artifactId>kotlin-js-library</artifactId>
+                        <version>${kotlin.version}</version>
+                    </dependency>
+                </dependencies>
+                <executions>
+                    <execution>
+                        <id>compile</id>
+                        <goals>
+                            <goal>compile</goal>
+                        </goals>
                     </execution>
                 </executions>
             </plugin>
@@ -62,7 +86,6 @@
 
         </plugins>
     </build>
-
 
 
 </project>
