--- a/samples/org.kevoree.modeling.sample.fsm.kt/pom.xml
+++ b/samples/org.kevoree.modeling.sample.fsm.kt/pom.xml
@@ -1,23 +1,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+
     <modelVersion>4.0.0</modelVersion>
+    <groupId>org.kevoree.modeling</groupId>
     <artifactId>org.kevoree.modeling.sample.fsm.kt</artifactId>
     <packaging>jar</packaging>
     <name>Kevoree :: Modeling :: Sample :: Finite State Machine :: Kotlin</name>
-    <groupId>org.kevoree.modeling</groupId>
     <version>1.3.0-SNAPSHOT</version>
 
     <properties>
         <metamodel.ecore>metamodel/fsm.ecore</metamodel.ecore>
         <kotlin.version>0.5.429</kotlin.version>
     </properties>
-
-    <parent>
-        <artifactId>org.kevoree.modeling.sample.root</artifactId>
-        <groupId>org.kevoree.modeling</groupId>
-        <version>1.0.0</version>
-        <relativePath>../org.kevoree.modeling.sample.root/pom.xml</relativePath>
-    </parent>
 
     <dependencies>
         <dependency>
@@ -79,6 +73,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.12.3</version>
                 <configuration>
                     <argLine>-Xmx1024m</argLine>
                 </configuration>
@@ -87,5 +82,46 @@
         </plugins>
     </build>
 
+    <repositories>
+        <repository>
+            <id>kevoree-libs-release-local</id>
+            <url>http://maven.kevoree.org/release</url>
+        </repository>
+        <repository>
+            <id>kevoree-snapshots</id>
+            <url>http://maven.kevoree.org/snapshots</url>
+        </repository>
+        <repository>
+            <id>jetbrains-release</id>
+            <url>http://repository.jetbrains.com/all</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
+
+    <pluginRepositories>
+        <pluginRepository>
+            <id>plugin.kevoree-github</id>
+            <url>http://maven.kevoree.org/release</url>
+        </pluginRepository>
+        <pluginRepository>
+            <id>plugin.kevoree-snapshots</id>
+            <url>http://maven.kevoree.org/snapshots</url>
+        </pluginRepository>
+        <pluginRepository>
+            <id>jetbrains-release</id>
+            <url>http://repository.jetbrains.com/all</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </pluginRepository>
+    </pluginRepositories>
 
 </project>
