--- a/samples/org.kevoree.modeling.sample.kevoree/pom.xml
+++ b/samples/org.kevoree.modeling.sample.kevoree/pom.xml
@@ -22,7 +22,7 @@
             <plugin>
                 <groupId>org.kevoree.modeling</groupId>
                 <artifactId>org.kevoree.modeling.kotlin.generator.mavenplugin</artifactId>
-                <version>1.3.0-SNAPSHOT</version>
+                <version>1.3.0-BETA2</version>
                 <extensions>true</extensions>
                 <executions>
                     <execution>
