--- a/samples/org.kevoree.modeling.sample.kevoree/pom.xml
+++ b/samples/org.kevoree.modeling.sample.kevoree/pom.xml
@@ -44,19 +44,11 @@
                 <groupId>org.jetbrains.kotlin</groupId>
                 <artifactId>kotlin-maven-plugin</artifactId>
                 <version>${kotlin.version}</version>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.jetbrains.kotlin</groupId>
-                        <artifactId>kotlin-js-library</artifactId>
-                        <version>${kotlin.version}</version>
-                    </dependency>
-                </dependencies>
                 <executions>
                     <execution>
                         <id>compile</id>
-                        <goals>
-                            <goal>compile</goal>
-                        </goals>
+                        <phase>process-sources</phase>
+                        <goals> <goal>compile</goal> </goals>
                     </execution>
                 </executions>
             </plugin>
@@ -64,6 +56,13 @@
     </build>
 
     <dependencies>
+
+        <dependency>
+            <groupId>org.jetbrains.intellij</groupId>
+            <artifactId>annotations</artifactId>
+            <version>117.157</version>
+        </dependency>
+
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-stdlib</artifactId>
