--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,4 @@ keystore
 /kevoree-core/org.kevoree.kompare/target/
 /kevoree-library/org.kevoree.library.restChannels/target/
 **.idea
+**/node_modules/**
