--- a/gpce2013-experiment/package.json
+++ b/gpce2013-experiment/package.json
@@ -2,10 +2,12 @@
   "name": "http-server",
   "preferGlobal": true,
   "version": "0.3.0",
-  "author": "Nodejitsu <support@nodejitsu.com>",
-  "description": "a simple zero-configuration command-line http server",
+  "author": "Duke",
+  "description": "simple WS server",
   "dependencies" : {
+	"fs"   :  "*",
     "socket.io"   :  "*",
-	"express"   :  "*"
+	"express"   :  "*",
+	"socket.io-client" : "*"
   }
 }
