--- a/metamodel/cloud/pom.xml
+++ b/metamodel/cloud/pom.xml
@@ -51,7 +51,7 @@
                             <ecore>${metamodel.ecore}</ecore>
                             <packagePrefix>org</packagePrefix>
                             <clearOutput>false</clearOutput>
-                            <js>false</js>
+                            <js>true</js>
                             <json>true</json>
                             <events>true</events>
                             <trace>true</trace>
