--- a/metamodel/cloudml/org.kevoree.modeling.sample.cloudml.kt/pom.xml
+++ b/metamodel/cloudml/org.kevoree.modeling.sample.cloudml.kt/pom.xml
@@ -24,7 +24,7 @@
             <groupId>org.kevoree.modeling</groupId>
             <artifactId>org.kevoree.modeling.microframework</artifactId>
             <version>${kmf.version}</version>
-        </dependency>
+        </dependency>			
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-stdlib</artifactId>
@@ -49,6 +49,7 @@
                             <ecore>${metamodel.ecore}</ecore>
                             <packagePrefix>kmf</packagePrefix>
                             <clearOutput>false</clearOutput>
+							<json>true</json>
                         </configuration>
                     </execution>
                 </executions>
