--- a/metamodel/ecore/org.kevoree.modeling.sample.ecore.js/pom.xml
+++ b/metamodel/ecore/org.kevoree.modeling.sample.ecore.js/pom.xml
@@ -3,13 +3,13 @@
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.kevoree.modeling</groupId>
-    <artifactId>org.kevoree.modeling.sample.kevoree.js</artifactId>
+    <artifactId>org.kevoree.modeling.sample.ecore.js</artifactId>
     <packaging>jar</packaging>
     <name>Kevoree :: Modeling :: Sample :: Kevoree :: JS</name>
     <version>1.0.0-SNAPSHOT</version>
 
     <properties>
-        <metamodel.ecore>metamodel/kevoree.ecore</metamodel.ecore>
+        <metamodel.ecore>metamodel/ecore.ecore</metamodel.ecore>
     </properties>
 
     <parent>
