--- a/metamodel/thingml/org.kevoree.modeling.sample.thingml.kt/pom.xml
+++ b/metamodel/thingml/org.kevoree.modeling.sample.thingml.kt/pom.xml
@@ -30,6 +30,11 @@
             <artifactId>org.kevoree.modeling.microframework</artifactId>
             <version>${kmf.version}</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+        </dependency>
     </dependencies>
 
     <build>
