--- a/metamodel/kevoree/org.kevoree.modeling.sample.kevoree.test/pom.xml
+++ b/metamodel/kevoree/org.kevoree.modeling.sample.kevoree.test/pom.xml
@@ -2,7 +2,6 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.kevoree.modeling</groupId>
     <artifactId>org.kevoree.modeling.sample.kevoree.test</artifactId>
     <packaging>jar</packaging>
     <name>Kevoree :: Modeling :: Sample :: Kevoree :: Test</name>
@@ -17,9 +16,14 @@
 
     <dependencies>
         <dependency>
-            <groupId>${project.groupId}</groupId>
+            <groupId>org.kevoree.modeling</groupId>
             <artifactId>org.kevoree.modeling.sample.kevoree.kt</artifactId>
-            <version>${project.version}</version>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.kevoree.modeling</groupId>
+            <artifactId>org.kevoree.modeling.microframework</artifactId>
+            <version>${kmf.version}</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
