--- a/org.kevoree.modeling.cpp.generator/pom.xml
+++ b/org.kevoree.modeling.cpp.generator/pom.xml
@@ -19,7 +19,7 @@
         <dependency>
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-library</artifactId>
-            <version>${scala.version}</version>
+            <version>2.9.2</version>
         </dependency>
         <dependency>
             <groupId>com.squareup</groupId>
