--- a/metamodel/pom.xml
+++ b/metamodel/pom.xml
@@ -37,7 +37,10 @@
 		
 		
         <module>multiecore</module>
-		<module>cloud</module>
+		
+		
+		<module>tinycloud/cloud.kt</module>
+		<module>tinycloud/cloud.js</module>
 		
 		<module>kermeta/org.kevoree.modeling.sample.kermeta.kt</module>
 		<module>kermeta/org.kevoree.modeling.sample.kermeta.emf</module>
